fix logo too small

--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -134,7 +134,6 @@ select:focus-visible {
 
 .sideBar-logo {
   width: 100%;
-  margin-top: 70px;
 }
 
 /* .navBar {
